--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -63,7 +63,11 @@
                                     </h1>
                                 </div>
                                 <div class="imgart__home">
-                                    <img src="/images/<%= product.images[0].name %>" alt="">
+                                    <% product.productImages.forEach(image => { %>
+                                        <% if (image.primary) { %>
+                                          <img src="/images/products/<%= product.productImages[0].name%>" alt="imagen del producto">
+                                        <% } %>
+                                      <% }) %>
                                 </div>
                                 <div class="precio">
                                     <h4>
