--- a/site_ViveBio/public/css/all.css
+++ b/site_ViveBio/public/css/all.css
@@ -14,8 +14,8 @@
 /* PRODUCTOS RELACIONADOS */
 .productAll .titulares {
     text-align: center;
-    color: var(--azulSuave);
-    background-color: #7FA794B8;
+    color: white;
+    background-color:#7FA794C4;
     margin: 30px 0;
     height: 80px;
     display: flex;
