--- a/site_ViveBio/public/css/login.css
+++ b/site_ViveBio/public/css/login.css
@@ -1,3 +1,10 @@
+.login{
+    background-image: url('/images/background-register.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
 .login_general_container {
     display: flex;
     align-items: center;
@@ -93,7 +100,8 @@
 }
 
 .login label {
-    font-size: 10px;
+    font-size: 13px;
+    font-weight: bold;
 }
 
 .login_form-box input {
@@ -131,11 +139,11 @@
     text-align: center;
 }
 
-.login_remember-box{
+/* .login_remember-box{
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
 
 
 @media (min-width: 425px) {
@@ -221,7 +229,7 @@
 
     .login_form-input:hover,
     .login_form-input:focus {
-        box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
+        box-shadow: 0 0 5px var(--verdeFuerte), 0 0 10px var(--verdeFuerte), 0 0 15px var(--verdeFuerte);
     }
 }
 
