--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -180,6 +180,7 @@
 
             <%- include('../partials/footer') %>
                 <script src="/javascript/menuMobile.js"></script>
+                <script src="/javascript/navEmergent.js"></script>
     </body>
 
 </html>
