--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -10,7 +10,7 @@
           <div class="container-imagen-texto">
             <div class="producto__imagen">
               <div class="box-imagen">
-                <img src="/images/<%= product.image[0] %>" alt="...">
+                <img src="/images/<%= product.productImages[0].name %>" alt="...">
               </div>
               <div class="box-info">
                 <div class="box-info-precio">
@@ -31,7 +31,7 @@
                 <%= product.name %>
               </h1>
               <p>
-                <h5>-<%= product.property %>-</h5>
+                <h5>-<%= product.property.name %>-</h5>
                 <%= product.description %>
               </p>
               <div class="producto__cart">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="producto-iconos">
                   <% if (locals.userLogin) { %>
-                    <% if (userLogin.category==="admin" ) { %>
+                    <% if (userLogin.rol==="admin" ) { %>
                       <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST">
                         <button type="submit" title="Eliminar producto"><i class="fa-solid fa-trash-can"></i></button>
                       </form>
@@ -67,26 +67,26 @@
           <h2 class="titulares">Productos Relacionados</h2>
           <section class="row">
 
-            <% relation.forEach(({id,image,name,discount,property,price})=> { %>
+            <% relations.forEach(relation=> { %>
               <article>
                 <div class="card estilo-c">
                   <div class="img-container">
-                    <img src="/images/<%= image %> " alt="producto">
+                    <img src="/images/<%= relation.productImages[0].name %> " alt="producto">
                     <span class="promo">
-                      <%= discount %>% off
+                      <%= relation.discount %>% off
                     </span>
                   </div>
                   <div class="info-container">
                     <div class="Card-info-texto">
-                      <a href="/products/Card/<%= id %> ">
+                      <a href="/products/Card/<%= relation.id %> ">
                         <h2>
-                          <%= name %>
+                          <%= relation.name %>
                         </h2>
                       </a>
-                      <span>-<%= property %> -</span>
+                      <span>-<%= relation.property.name %> -</span>
                       <p>$
-                        <% if (discount) { %>
-                          <%= toThousand(price - (price * discount / 100)) %>
+                        <% if (product.discount) { %>
+                          <%= toThousand(product.price - (product.price * product.discount / 100)) %>
                             <% }else{ %>
                               <%= toThousand(price) %>
                                 <% } %>
@@ -95,12 +95,12 @@
                     <div class="card-c-iconos">
                       <div class="iconos-white">
                         <% if (locals.userLogin) { %>
-                          <% if (userLogin.category==="admin" ) { %>
-                            <a href="/products/Edit/<%= id %> " title="Editar producto"><i
+                          <% if (userLogin.rol==="admin" ) { %>
+                            <a href="/products/Edit/<%= product.id %> " title="Editar producto"><i
                                 class="fa-solid fa-pen"></i></a>
                             <% } %>
                               <% } %>
-                                <a href="/products/Card/<%= id %> " title="Ver producto"><i
+                                <a href="/products/Card/<%= product.id %> " title="Ver producto"><i
                                     class="fa-solid fa-eye"></i></a>
                                 <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
@@ -168,6 +168,7 @@
       </main>
       <%- include('../partials/footer') %>
         <script src="/javascript/menuMobile.js"></script>
+        <script src="/javascript/navEmergent.js"></script>
         <script src="/javascript/navEmergent.js"></script>
   </body>
 
