--- a/site_ViveBio/src/views/products/card.ejs
+++ b/site_ViveBio/src/views/products/card.ejs
@@ -29,7 +29,7 @@
               </p>
                 <div class="producto-iconos">
                     <% if (locals.userLogin) { %>
-                      <% if (userLogin.category==="admin" ) { %>
+                      <% if (userLogin.rol==="admin" ) { %>
                         <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST">
                         <button type="submit" title="Eliminar producto"><i class="fa-solid fa-trash-can"></i></button>
                         </form>
